--- a/indez.html
+++ b/indez.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>AluraBooks</h1> 
+    <header class="cabeçalho"
+     <span class="cabeçalho_menu-hamburguer"></span>
+     <img src="img/Logo.svg"  alt="Logo do AluraBook">
+     <a href="#"><<img s>    
+     <a href="#"><img src="img/Compras.svg"></a>   
+     <a href="#"><img src="img/Usuario.svg"></a>   
+</header>
 </body>
 </html>
